# traffic-example

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.example.yml  pyproject.toml  setup.cfg
tests/: test_dummy.py
tests/factories/: forecast_rule.py
tests/forecasting/: test_model_factory.py
tests/forecasting/models/: test_f1.py  test_f2.py
tests/forecasting/services/: test_calculation.py  test_capping.py
tra/apps/forecast_rules/domain/: entities.py  enums.py  repositories.py
tra/apps/forecast_rules/infra/: forecast_rule_memo_repo.py
tra/apps/forecast_rules/infra/rest/: __init__.py  endpoints.py  schemas.py
tra/apps/forecast_rules/persistence/: forecast_rule_memo_repo.py  forecast_rule_mongo_repo.py
tra/apps/forecast_rules/rest/: endpoints.py
tra/apps/forecasting/: model_factory.py  model_factory_abc.py
tra/apps/forecasting/models/: abstract.py  f1.py  f2.py
tra/apps/forecasting/services/: __init__.py  calculation.py  calculation_abc.py  capping.py  capping_abc.py
tra/core/: enums.py  types.py
tra/infra/: di_container.py  fastapi_app.py  persistence.py
